--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -21,6 +21,9 @@
 - "" -> false
 
 自动转换 
+- ToPrimitive
+  - String： toString -> valueOf -> TypeError
+  - Number:　valueof -> toString -> TypeError
 ```
 "5" + 1     // 返回 "51"      1 转换为 "1"  
 "5" - 1     // 返回 4         "5" 转换为 5
