--- a/javascript/防抖-节流.md
+++ b/javascript/防抖-节流.md
@@ -14,8 +14,9 @@ function throttle(fn, interval = 300) {
     return function () {
         if (!canRun) return;
         canRun = false;
+        args = arguments
         setTimeout(() => {
-            fn.apply(this, arguments);
+            fn.apply(this, args);
             canRun = true;
         }, interval);
     };
@@ -40,16 +41,11 @@ function ajax(content) { // 模拟一个api call
 function debounce(fun, delay) {
     let timeout = null;
     return function () {
+        var args = arguments
         clearTimeout(timeout)
-        timeout = setTimeout(function () {
-            fun.call(this, arguments);
-        }, delay)
+        timeout = setTimeout((() => fun.apply(this, args)), delay)
     }
 }
-    
-let input = document.getElementById('debounce')
-let debounceAjax = debounce(ajax, 500)
-input.addEventListener('keyup', function (e) {
-    debounceAjax(e.target.value);
-})
+
+debounce(ajax, 500)(content);
 ```
