--- a/javascript/防抖-节流.md
+++ b/javascript/防抖-节流.md
@@ -31,7 +31,7 @@ function throttle(fn, interval = 300) {
 
 实现方法：   
 - 用闭包保存一个setTimeout的返回值   
-- 每当有新的用户输入的时候调用debounce函数，把前一次的色timeout clear掉  
+- 每当有新的用户输入的时候调用debounce函数，把前一次的timeout id clear掉  
 - 这样就能保证delay时间内如果用户还有在输入，不会执行ajax。只有指定间隔内没有输入时才会执行函数      
 ```
 function ajax(content) { // 模拟一个api call
