--- a/javascript/network/http/状态码.md
+++ b/javascript/network/http/状态码.md
@@ -21,8 +21,15 @@
 客户端请求报文语法或参数错误，服务器不理解 
 #### 401 Unauthorized
 发送的请求需要有HTTTP认证信息或者是认证失败
+服务器会发一个WWW-Authenticate的响应，要客户端回应自己的认证信息  
 #### 403 Forbidden
 访问被服务器拒绝  
 可能是没有访问权限
 #### 404 Not Found
 服务器找不到请求的资源
+
+### 5XX 服务器错误
+#### 500 Internal Server Error
+#### 503 Service Unavailable
+服务器超负载或正停机维护，无法处理请求 
+
