--- a/javascript/防抖-节流.md
+++ b/javascript/防抖-节流.md
@@ -22,6 +22,25 @@ function throttle(fn, interval = 300) {
     };
 }
 ```
+带立即执行选项的防抖函数
+```
+function debounce(func, delay, immediate) {
+	let timeout = null;
+	return function() {
+		if (!timeout) {
+			clearTimeout(timeout);
+		}
+
+		if (immediate) {
+			func.call(this, arguments);
+			setTimeout(() => timeout = null, delay);
+		} else { 
+			let args = arguments;
+			setTimeout(() => func.call(this, args), delay);
+		}
+	};
+}
+```
 
 ### 防抖 debounce 
 在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。   
