--- a/network/http/缓存.md
+++ b/network/http/缓存.md
@@ -9,6 +9,17 @@
 优先级Cache-Control: max-age　> Expires   
 过期时间内服务器上更新了客户端怎么获取最新的资源？协商缓存来处理  
 
+###### memory cache 内存缓存
+- 快速读取：内存缓存会将编译解析后的文件，直接存入该进程的内存中，占据该进程一定的内存资源，以方便下次运行使用时的快速读取 
+- 时效性：一旦该进程关闭，则该进程的内存则会清空
+
+###### disk cache 硬盘缓存
+直接将缓存写入硬盘文件中，读取缓存需要对该缓存存放的硬盘文件进行I/O操作，然后重新解析该缓存内容，读取复杂，速度比内存缓存慢
+
+浏览器读取缓存的顺序为memory –> disk
+
+在浏览器中，浏览器会在js和图片等文件解析执行后直接存入内存缓存中，那么当刷新页面时只需直接从内存缓存中读取(from memory cache)；而css文件则会存入硬盘文件中，所以每次渲染页面都需要从硬盘读取缓存(from disk cache)
+
 #### 协商缓存
 ##### [Last-Modified (response header), If-Modified-Since (request header)]    
 - 请求资源之后repsonse header加上Last-Modified字段
