--- a/javascript/防抖-节流.md
+++ b/javascript/防抖-节流.md
@@ -22,25 +22,6 @@ function throttle(fn, interval = 300) {
     };
 }
 ```
-带立即执行选项的防抖函数
-```
-function debounce(func, delay, immediate) {
-	let timeout = null;
-	return function() {
-		if (!timeout) {
-			clearTimeout(timeout);
-		}
-
-		if (immediate) {
-			func.call(this, arguments);
-			setTimeout(() => timeout = null, delay);
-		} else { 
-			let args = arguments;
-			setTimeout(() => func.call(this, args), delay);
-		}
-	};
-}
-```
 
 ### 防抖 debounce 
 在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。   
@@ -58,13 +39,45 @@ function ajax(content) { // 模拟一个api call
 }
 
 function debounce(fun, delay) {
-    let timeout = null;
+    let timer = null;
     return function () {
-        var args = arguments
-        clearTimeout(timeout)
-        timeout = setTimeout((() => fun.apply(this, args)), delay)
+        const that = this;
+        const args = arguments;
+        timer && clearTimeout(timer);
+        timer = setTimeout((() => fun.apply(this, args)), delay)
     }
 }
 
 debounce(ajax, 500)(content);
+```
+带立即执行选项的防抖函数
+```
+function debounce(func, delay, immediate) {
+	let timer = null;
+	return function() {
+        const that = this;
+        const args = arguments;
+        timer && clearTimeout(timer);
+		if (immediate) {
+			func.call(this, arguments);
+			setTimeout(() => timer = null, delay);
+		} else { 
+			setTimeout(() => func.call(that, args), delay);
+		}
+	};
+}
+```
+函数有返回值，因为在setTimeout里是异步返回所以用Promise封装 
+```
+function debounce(func, delay) {
+    let timer = null;
+    return function() {
+        const that = this;
+        const args = arguments;
+        return new Promise((resolve, reject) =>
+            timer && clearTimeout(timer);
+            setTimeout(() => func.appy(that, args), delay);
+        )
+    }
+}
 ```
