Update 数据类型 .md

--- a/javascript/类型系统/数据类型 .md
+++ b/javascript/类型系统/数据类型 .md
@@ -76,7 +76,7 @@
 
 #### 基本包装类型 Number, Boolean, String  
 - 为什么基本类型可以调用包装类型上的方法```'test'.substring(2)```
-读取基本类型饰临时床在了对应的基本包装类型对象，读取完成后就会销毁  
+读取基本类型饰临时创建在了对应的基本包装类型对象，读取完成后就会销毁  
 - 构造函数和转型函数typeof的区别 
     - 构造函数 new Number(), typeof 返回object  
       ```typeof (new NUmber()) === 'object'```
