--- a/network/http/状态码.md
+++ b/network/http/状态码.md
@@ -2,12 +2,15 @@
 #### 101 Switch Protocols
 比如用Web Socket握手的时候会发起101Upgrade协议切换
 ### 2xx 成功 
+#### 200 OK
+#### 204 No Content
+没有body
 
 ### 3xx 重定向  
 #### 300  Multiple Choice
 请求的文档可以在多个地方找到  
 #### 301 Moved Permanently
-请求的文档在别的地方，响应头中给出新的url，浏览器自动连接到新的url
+请求的文档在别的地方，响应头中location字段给出新的url，浏览器自动连接到新的url
 #### 302 Found
 和301类似，但是301是永久重定向，302是临时重定向
 #### 304 Not Modified
@@ -15,8 +18,6 @@
 服务器返回304，表示Not Modified。 于是客户端可以直接在自己的缓存里面拿文档了
 #### 305 Use Proxy
 要通过代理才能访问 
-#### 307 Temporary Redirect  
-跟302类似，302使用GET, POST请求重定向，307只使用GET请求重定向 
 
 ### 4xx客户端错误 
 #### 400 Bad Request
@@ -32,6 +33,9 @@
 
 ### 5XX 服务器错误
 #### 500 Internal Server Error
+#### 501 Not Implemented
+#### 502 Bad Gateway
+网关或者代理错误
 #### 503 Service Unavailable
 服务器超负载或正停机维护，无法处理请求 
 
