--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -1,12 +1,12 @@
-1. 转成String
+#### 转成String
 - String()
 - toString()
 - [] -> ""
 - [20] -> "20"
 
-2. 转成Number
+#### 转成Number
 - Number()
-- Date转成Number .getTIme()
+- Date转成Number .getTime()
 - undefined -> NaN
 - null -> 0
 - "" -> 0
@@ -20,7 +20,7 @@
 - NaN -> false
 - "" -> false
 
-自动转换 
+#### 自动转换 
 - ToPrimitive
   - String： toString -> valueOf -> TypeError
   - Number:　valueof -> toString -> TypeError
