--- a/network/跨域/同源策略.md
+++ b/network/跨域/同源策略.md
@@ -1,1 +1,5 @@
-同协议 同域名 同端口 在能获取资源在同源策略下 域名A下可以访问域名B下的脚本 css 和图片 但是A不能向B发起Ajax请求。
+- 同协议 
+- 同域名 
+- 同端口   
+
+同源策略下，域名A下可以访问域名B下的脚本，css和图片。但是A不能向B发起Ajax请求。
