--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -3,11 +3,12 @@
 - toString()
 - [] -> ""
 - [20] -> "20"
+- [1, 2] -> '1, 2'
 
 #### 转成Number
 - Number()
 - Date转成Number .getTime()
-- undefined -> NaN
+- **undefined -> NaN**
 - null -> 0
 - "" -> 0
 - [] -> 0
@@ -37,7 +38,7 @@
 **Object.prototype.toString()是判断数据类型的终极解决办法**   
 
 #### toString 和 String的区别  
-toString可以转换null, undefined, 而String不能   
+**toString可以转换null, undefined, 而String不能**  
 
 
 [Reference](https://juejin.im/post/5d030e03518825361817032f)
