--- a/javascript/严格模式.md
+++ b/javascript/严格模式.md
@@ -34,3 +34,33 @@ function f1(){
   f1.arguments; // 报错
 }
 ```
+- 禁止删除变量, 只有configurable设置为true的对象属性，才能被删除
+```
+"use strict";
+  var x;
+  delete x; // 语法错误
+  var o = Object.create(null, {'x': {
+    value: 1,
+    configurable: true
+}});
+delete o.x; // 删除成功
+```
+- 对象不能有重名的属性
+- 函数不能有重名的参数
+- 不允许对arguments赋值,
+- arguments不再追踪参数的变化
+```
+function f(a) {
+  a = 2;
+  return [a, arguments[0]];
+}
+f(1); // 正常模式为[2,2]
+function f(a) {
+  "use strict";
+  a = 2;
+  return [a, arguments[0]];
+}
+f(1); // 严格模式为[2,1]
+```
+- 禁止使用arguments.callee
+- 函数必须声明在顶层
