--- a/javascript/严格模式.md
+++ b/javascript/严格模式.md
@@ -47,7 +47,7 @@ delete o.x; // 删除成功
 ```
 - 对象不能有重名的属性
 - 函数不能有重名的参数
-- 不允许对arguments赋值,
+- 不允许对arguments赋值
 - arguments不再追踪参数的变化
 ```
 function f(a) {
@@ -64,3 +64,11 @@ f(1); // 严格模式为[2,1]
 ```
 - 禁止使用arguments.callee
 - 函数必须声明在顶层
+```
+"use strict";
+  if (true) {
+    function f() { } // 语法错误
+  }
+```
+- 新增保留字   
+implements, interface, let, package, private, protected, public, static, yield
