--- a/css/layout/垂直居中.md
+++ b/css/layout/垂直居中.md
@@ -1,5 +1,53 @@
-### position absolute + top 50% + margin -(1/2)height  
-必须知道被居中元素的尺寸
+## 行内元素
+### 对单行文本垂直居中: line-height == container height 
+```
+<div id="box">test vertical align</div>
+#box{
+    width: 300px;
+    height: 300px;
+    background: #ddd;
+    line-height: 300px; // line-height必须等于height
+    text-align: center; // text-align定义水平对齐方式，加上text-align就会垂直水平都居中
+}
+```
+  
+### 对多行文本垂直居中: 父元素table，子元素table-cell + vertical-align: middle    
+```
+#box {
+    width: 300px;
+    height: 300px;
+    background: #ddd;
+    display: table;
+}
+#child {
+    display: table-cell;
+    vertical-align: middle;
+}
+```
+
+### 对图片垂直居中: line-height == container height + 子元素vertical-align: middle   
+```
+#box{
+    width: 300px;
+    height: 300px;
+    background: #ddd;
+    line-height: 300px;
+}
+#box img {
+    width: 200px;
+    height: 200px;
+    vertical-align: middle;
+}
+```
+
+#### vertical-align
+vertival-align只对inline, inline-block, table-cell元素起作用   
+inline-block元素: 图片，button，单复选框，单行/多行文本      
+同样的text-align也只对inline-block元素水平居中 
+
+## 块级元素
+### position absolute + top 50% + 负margin -(1/2)height  
+**父元素和子元素定高，父元素需设置position: relative**
 ```
 #box {
     width: 300px;
@@ -9,7 +57,7 @@
 }
 #child {
     width: 150px;
-    height: 100px; // 定高
+    height: 100px; // 定高，高度是容器高度的1/3
     background: orange;
     position: absolute;
     top: 50%;
@@ -17,7 +65,28 @@
 }
 ```
 
-### position absolute + margin auto + (top == bottom)
+### postion absolute + top: 50% + transform: tanslate(0, -50%)
+translate(x, y)百分比是相对自身元素尺寸而言的     
+transform: tanslate(0, -50%)相当于上面方法的负margin -(1/2)height
+```
+#box {
+    width: 300px;
+    height: 300px;
+    background: #ddd;
+    position: relative;
+}
+#child {
+    width: 150px;
+    height: 100px; // 定高，高度是容器高度的1/3
+    background: orange;
+    position: absolute;
+    top: 50%;
+    transform: tanslate(0, -50%)
+}
+```
+
+### position absolute + margin auto + top == bottom = 0
+**父元素定高**
 ```
 #box {
     width: 300px;
@@ -36,7 +105,7 @@
 }
 ```
 
-### 父元素height不定，上下padding设置相等 
+### 父元素height不定，子元素定高，上下padding设置相等 
 ```
 #box {
     width: 300px;
@@ -50,54 +119,7 @@
 }
 ```
 
-### line-height == container height 对单行文本垂直居中  
-```
-<div id="box">test vertical align</div>
-#box{
-    width: 300px;
-    height: 300px;
-    background: #ddd;
-    line-height: 300px; // line-height必须等于height
-    text-align: center; // text-align定义水平对齐方式，加上text-align就会垂直水平都居中
-}
-```
-
-### (line-height == height) + 子元素vertical-align middle 对图片垂直居中  
-```
-#box{
-    width: 300px;
-    height: 300px;
-    background: #ddd;
-    line-height: 300px;
-}
-#box img {
-    width: 200px;
-    height: 200px;
-    vertical-align: middle;
-}
-```
-  
-### table-cell + vertical-align middle   
-```
-#box {
-    width: 300px;
-    height: 300px;
-    background: #ddd;
-    display: table;
-}
-#child {
-    display: table-cell;
-    vertical-align: middle;
-}
-```
-#### vertical-align
-
-vertival-align只对inline, inline-block, table-cell元素起作用   
-inline-block元素: 图片，button，单复选框，单行/多行文本      
-同样的text-align也只对inline-block元素水平居中 
-
-### flex
-#### flex + align-items center
+### flex + align-items center
 ```
 #box {
     width: 300px;
@@ -118,7 +140,7 @@ inline-block元素: 图片，button，单复选框，单行/多行文本
     justify-content: center;
 }
 ```
-#### flex + margin-auto
+### flex + margin-auto
 
 ### grid 
 ```
