--- a/css/选择器.md
+++ b/css/选择器.md
@@ -1,7 +1,7 @@
 #### 选择器优先级
 A | B | C | D 
 --- | --- | --- | ---
-内联 | id | class，属性，伪类 | 标签
+内联 | id | class，属性，伪类 | 标签，伪元素
 - 求出ABCD值
 - 从左到右比较大小
 
@@ -28,39 +28,43 @@ E[att\|=val] |	匹配所有att属性具有多个连字号分隔（hyphen-separat
 E[att^="val"] |	属性att的值以"val"开头的元素
 E[att$="val"] |	属性att的值以"val"结尾的元素
 E[att*="val"] |	属性att的值包含"val"字符串的元素
-E:not(att)	匹配att是false的元素
 
 #### 伪类选择器
 标识  | 说明 
 ------------- | --- 
-E:before | 在E元素之前插入生成的内容```.cbb:before { content:""; display:block; height:17px; width:18px; margin:0 0 0 -18px; }```
-E:after |	在E元素之后插入生成的内容
-E:first-child |	匹配父元素的第一个子元素
-E:first-line |	匹配E元素的第一行
-E:first-letter |	匹配E元素的第一个字母
-E:root |匹配文档的根元素，对于HTML文档，就是HTML元素
-E:nth-child(n) |	匹配E的父元素下面的第n个子元素，第一个编号为1
-E:nth-last-child(n) |	匹配E的父元素下面的倒数第n个子元素，第一个编号为1
-E:nth-of-type(n) |	匹配E的父元素下面，标签同为E的第n个子元素
-E:nth-last-of-type(n) |	匹配E的父元素下面，标签同为E的倒数第n个子元素
-E:last-child |匹配E的父元素下面最后一个子元素，等同于:nth-last-child(1)
-E:first-of-type |	匹配E的父元素下面，标签同为E的第一个子元素，等同于:nth-of-type(1)
-E:last-of-type | 匹配E的父元素下面，标签同为E的最后一个子元素，等同于:nth-last-of-type(1)
-E:only-child |	匹配的元素E是其父元素的唯一子元素
-E:only-of-type |	匹配的元素E是其父元素的唯一标签为E的子元素
-E:empty |	匹配一个不包含任何子元素的元素，注意，文本节点也被看作子元素
-E:target |	匹配元素的id和url锚点相同
-
-#### 用户界面选择器
-标识  | 说明 
-------------- | --- 
-E:link |	匹配所有未被点击的链接
-E:visited |	匹配所有已被点击的链接
+E:not(att) |匹配att是false的元素
 E:active |	匹配鼠标已经其上按下、还没有释放的E元素
 E:hover |	匹配鼠标悬停其上的E元素
 E:focus |	匹配获得当前焦点的E元素
+E:link |	匹配所有未被点击的链接
+E:visited |	匹配所有已被点击的链接
 E:enabled |	匹配表单中激活的元素
 E:disabled |	匹配表单中禁用的元素
 E:checked |	匹配表单中被选中的radio（单选框）或checkbox（复选框）元素
-E::selection |	匹配用户当前选中的元素
 E:lang(c)	| 匹配lang属性等于c的E元素
+E:first-child |	匹配父元素的第一个子元素
+E:root |匹配文档的根元素，对于HTML文档，就是HTML元素
+E:nth-child(n) |	匹配E的父元素下面的第n个子元素，第一个编号为1
+E:nth-last-child(n) |	匹配E的父元素下面的倒数第n个子元素，第一个编号为1
+E:last-child |匹配E的父元素下面最后一个子元素，等同于:nth-last-child(1)
+E:only-child |	匹配的元素E是其父元素的唯一子元素
+E:only-of-type |	匹配的元素E是其父元素的唯一标签为E的子元素
+E:nth-of-type(n) |	匹配E的父元素下面，标签同为E的第n个子元素
+E:nth-last-of-type(n) |	匹配E的父元素下面，标签同为E的倒数第n个子元素
+E:first-of-type |	匹配E的父元素下面，标签同为E的第一个子元素，等同于:nth-of-type(1)
+E:last-of-type | 匹配E的父元素下面，标签同为E的最后一个子元素，等同于:nth-last-of-type(1)
+E:empty |	匹配一个不包含任何子元素的元素，注意，文本节点也被看作子元素
+E:target |	匹配元素的id和url锚点相同
+
+#### 伪元素选择器
+标识  | 说明 
+------------- | --- 
+
+E::before | 在E元素之前插入生成的内容```.cbb:before { content:""; display:block; height:17px; width:18px; margin:0 0 0 -18px; }```
+E::after |	在E元素之后插入生成的内容
+E::first-line |	匹配E元素的第一行
+E::first-letter |	匹配E元素的第一个字母
+E::selection |	匹配用户当前选中的元素
+
+
+
