--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -25,13 +25,27 @@
 - ToPrimitive
   - String： toString -> valueOf -> TypeError
   - Number:　valueof -> toString -> TypeError
+
+- valueOf优先级高于toString
 ```
-"5" + 1     // 返回 "51"      1 转换为 "1"  
-"5" - 1     // 返回 4         "5" 转换为 5
+function fn() {
+    return 20;
+}
+fn.toString = function() {
+    return 10;
+}
+fn.valueOf = function() {
+    return 5;
+}
+console.log(fn + 10); //15
 ```
 - 加法运算符
   - 有string时转成string
   - 没有string转成number
+```
+"5" + 1     // 返回 "51"      1 转换为 "1"  
+"5" - 1     // 返回 4         "5" 转换为 5
+```
 - 其他运算符： 全部转成number
 - ==： number优先而不是string优先  
 
