--- a/javascript/function-scope-prototype/闭包.md
+++ b/javascript/function-scope-prototype/闭包.md
@@ -1,20 +1,19 @@
-闭包是在一个函数里声明了另外一个函数，并且这个函数访问了父函数作用域里的变量   
-其实每个函数都带一个闭包，只是在一个函数里面声明并返回另一个函数，且这个函数访问了副函数的变量，才需要注意闭包
+#### 闭包
+##### 一个完整的闭包详解
 ```
-function createCounter() {
-  let counter = 0;
-  const myFunction = function() {
-    counter = counter + 1;
-    return counter;
-  }
-  return myFunction;
-}
-
-const increment = createCounter();
-const c1 = increment();
-const c2 = increment();
-const c3 = increment();
-console.log('example increment', c1, c2, c3)
+1.  function createCounter() {
+2.    let counter = 0;
+3.    const myFunction = function() {
+4.      counter = counter + 1;
+5.      return counter;
+6.    }
+7.    return myFunction;
+8.  }
+9.  const increment = createCounter();
+10. const c1 = increment();
+11. const c2 = increment();
+12. const c3 = increment();
+13. console.log('example increment', c1, c2, c3)
 ```
 1. 第1-8行。我们在全局执行上下文中创建了一个新的变量createCounter，它得到了指定的函数定义。
 2. 第9行。我们在全局执行上下文中声明了一个名为increment的新变量。
@@ -29,4 +28,50 @@ console.log('example increment', c1, c2, c3)
 11. 创建一个新的执行上下文，没有参数，开始执行函数。
 12. 第4行。counter = counter + 1，寻找变量 counter，在查找本地或全局执行上下文之前，让我们检查一下闭包，瞧，闭包包含一个名为counter的变量，其值为0。在第4行表达式之后，它的值被设置为1。它再次被储存在闭包里，闭包现在包含值为1的变量 counter。
 
-Question:  闭包和上下文，查找顺序是什么？
+
+##### 闭包是什么
+- 函数作用域和作用域继承 
+  - 作用域栈： 子函数的作用域栈包括上级函数的作用域和当前函数的作用域
+  - 变量的作用域属于函数作用域
+- 内存回收机制
+  - 函数调用结束后作用域栈被清理，内存被回收
+  - 闭包的上级函数执行完之后，闭包的上下文中关于上级函数的作用域不会被清理。因此闭包仍然能够访问上级作用域中的变量 
+
+##### 应用
+- Ajax请求的成功回调
+- 事件绑定的回调方法
+- setTimeout的延时回调
+- 函数内部返回另一个匿名函数
+
+#### interview questions
+写一个mul函数，使用方法如下
+```
+console.log(mul(2)(3)(4)); // output : 24 
+console.log(mul(4)(3)(4)); // output : 48
+```
+答案
+
+```
+function mul (x) {
+    return function (y) { // anonymous function 
+        return function (z) { // anonymous function 
+            return x * y * z; 
+        };
+    };
+}
+```
+```
+function mul() {
+    let args = [...arguments];
+    function _mul() {
+        args = args.concat([...arguments]);
+        return mul.apply(null, args);
+    }
+
+    _mul.toString = function() {
+        return args.reduce((a, b) => a * b);
+    }
+
+    return _mul;
+}
+```
