--- a/javascript/function-scope-prototype/闭包.md
+++ b/javascript/function-scope-prototype/闭包.md
@@ -30,12 +30,12 @@
 
 
 ##### 闭包是什么
-- 函数作用域和作用域继承 
-  - 作用域栈： 子函数的作用域栈包括上级函数的作用域和当前函数的作用域
-  - 变量的作用域属于函数作用域
+- 执行环境和作用域链
+  - 函数被调用时会创造执行环境和作用域链
+  - 先把全局对象推进作用域链，然后把上层函数对象推进作用域链，最后把函数的活动对象(arguments和local variables)推进作用域链
 - 内存回收机制
-  - 函数调用结束后作用域栈被清理，内存被回收
-  - 闭包的上级函数执行完之后，闭包的上下文中关于上级函数的作用域不会被清理。因此闭包仍然能够访问上级作用域中的变量 
+  - 函数调用结束后作用域链被清理，内存被回收
+  - 闭包返回的匿名函数仍然在引用活动对象，它的作用域链被销毁但是活动对象仍然留在内存中。直到匿名函数被销毁其活动对象才被销毁
 
 ##### 应用
 - Ajax请求的成功回调
@@ -74,4 +74,17 @@ function mul() {
 
     return _mul;
 }
+```
+
+#### 块级作用域
+```
+(function() {
+    // 块级作用域
+})()
+```
+```
+var f = function() {
+    // 块级作用域
+}
+f();
 ```
