--- a/network/跨域/同源策略.md
+++ b/network/跨域/同源策略.md
@@ -2,4 +2,7 @@
 - 同域名 
 - 同端口   
 
-同源策略下，域名A下可以访问域名B下的脚本，css和图片。但是A不能向B发起Ajax请求。
+同源限制
+- Cookie、LocalStorage 和 IndexDB 无法读取
+- DOM 和 Js对象无法获得
+- AJAX 请求不能发送
