--- a/css/layout/三列布局.md
+++ b/css/layout/三列布局.md
@@ -1,38 +1,20 @@
-#### float
+#### float/absolute让left,right居左/右
 center要放在left, right的下面，否则center div独占一行，会把后面的right挤到下一行
 ```
 <div class="left"></div>
 <div class="right></div>
 <div class="center"></div>
 .left {
-  float: left;
+  float: left; or position: absolute; left: 0;
   width: 300px;
 }
 .right {
-  float: right;
+  float: right; or position: absolute; right: 0
   width: 300px;
 }
 .center: {
-  margin-left: 300px;
+  margin-left: 300px; 
   margin-right: 300px;
-}
-```
-
-#### position: absolute
-```
-.left {
-  width: 300px;
-  position: absolute:
-  left: 0;
-}
-.center {
-  margin-left: 300px;
-  margin-right: 300px;
-}
-.right {
-  width: 300px;
-  position: absolute;
-  right: 0
 }
 ```
 
