--- a/css/layout/两列布局.md
+++ b/css/layout/两列布局.md
@@ -41,7 +41,6 @@ right position absolute + left: left的宽度
 ```
 
 #### float + 负margin
-left margin
 ```
 .left {
   float: left;
@@ -53,7 +52,7 @@ left margin
   width: 100%; // 宽度100%
 }
 ```
-或者把right放在left前面，跟三列布局的float + 负margin原理一样
+把right放在left前面，跟三列布局的float + 负margin原理一样
 ```
 <div class="right"></div>
 <div class="left"></div>
@@ -64,7 +63,7 @@ left margin
 .left {
   width: 300px;
   float: left;
-  width: -100%; // 本来left在right的下面一行，width -100%把左边界往回拉了一整行的距离，于是到了上一行的最左边
+  margin-left: -100%; // 本来left在right的下面一行，margin-left: -100%把左边界往回拉了一整行的距离，于是到了上一行的最左边
 }
 ```
 
