--- a/network/通信及协议/网络协议与层模型.md
+++ b/network/通信及协议/网络协议与层模型.md
@@ -1,2 +1,14 @@
-阮一峰笔记（http://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_i.html）
-(http://www.mahaixiang.cn/internet/801.html)  
+四层
+- 应用层
+- 传输层
+- 网络层
+- 数据链路层
+
+七层
+- 应用层
+- 表示层- 数据格式表示，压缩加密
+- 会话层- 控制session
+- 传输层- TCP/UDP
+- 网络层- IP
+- 数据链路层- 定义数据格式，网卡MAC地址
+- 物理层
