--- a/javascript/function-scope-prototype/闭包.md
+++ b/javascript/function-scope-prototype/闭包.md
@@ -43,8 +43,21 @@
 - setTimeout的延时回调
 - 函数内部返回另一个匿名函数
 
+#### 块级作用域
+```
+(function() {
+    // 块级作用域
+})()
+```
+```
+var f = function() {
+    // 块级作用域
+}
+f();
+```
+
 #### interview questions
-写一个mul函数，使用方法如下
+- 写一个mul函数，使用方法如下
 ```
 console.log(mul(2)(3)(4)); // output : 24 
 console.log(mul(4)(3)(4)); // output : 48
@@ -76,15 +89,33 @@ function mul() {
 }
 ```
 
-#### 块级作用域
+- 下面这个JS程序的输出是什么
 ```
-(function() {
-    // 块级作用域
-})()
-```
-```
-var f = function() {
-    // 块级作用域
+function Foo() {
+    var i = 0;
+    return function() {
+        console.log(i++);
+    }
 }
-f();
+ 
+var f1 = Foo(),
+    f2 = Foo();
+f1();
+f1(); 
+f2(); // i只在f1的作用域链中发生了变化，f2中i仍然是0
+// 0 1 0
+```
+
+- 请给出这段代码的运行结果
+```
+<SCRIPT LANGUAGE="JavaScript">
+var bb = 1;
+function aa(bb) {
+    bb = 2; // bb只在aa的块级作用域内overwrite了global的bb变成了2
+    alert(bb);
+};
+aa(bb);
+alert(bb);
+</SCRIPT>
+2 1
 ```
