--- a/network/http/缓存.md
+++ b/network/http/缓存.md
@@ -39,6 +39,8 @@ Last-Modified, If-Modified-Since是以秒为单位的。如果资源更新速度
 #### [ETag, If-None-Match] 
 - Etag是唯一标识符，和时间没有关系，只要资源变化这个标识符就不同，很好的补充了Last-Modifed的问题   
 - If-None-Match后面跟上次接受到的Etag传过来的唯一标识符    
+- 强Etag "id":不论实体发生多么细微的变化都会改变其值(比如)
+- 弱Etag w/"id":只用于提示资源是否相同。只有资源发生了根本改变产 生差异时才会改变 
 
 [ETag, If-None-Match]能够准确判断资源是否被更改，但需要对资源生成标识，牺牲了一部分性能   
 优先级[ETag, If-None-Match] > [Last-Modified, If-Modified-Since]
