--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -14,12 +14,14 @@
 - [] -> 0
 - [20] -> 20
 - [10, 20] -> NaN
-3. 转成Boolean
+
+#### 转成Boolean
 - undefined -> false
 - null -> false
 - 0, -0, +0 -> false
 - NaN -> false
 - "" -> false
+- [] -> true
 
 #### 自动转换 
 - ToPrimitive
