--- a/浏览器/回流和重绘.md
+++ b/浏览器/回流和重绘.md
@@ -20,6 +20,7 @@
 - 避免逐项更改样式。最好一次性更改style属性，或者将样式列表定义为class并一次性更改class属性
 - 避免多次读取offsetLeft等属性。无法避免则将它们缓存到变量
   - 不要把 DOM 结点的属性值放在一个循环里当成循环里的变量（每次获取属性值都是一次reflow）
+- 修改层级比较低的DOM
 - 不要使用table布局
 - 将复杂的元素绝对定位或固定定位，使它脱离文档流。或者把复杂元素放在另一个图层里
   - 以下几个常用属性可以生成新图层
