--- a/浏览器/渲染优化.md
+++ b/浏览器/渲染优化.md
@@ -3,10 +3,12 @@
 - 如果你想首屏渲染的越快，就越不应该在首屏就加载 JS 文件
 - Script标签放在HTML的最下面
 
-#### CSS阻塞渲染优化
-在构建CSSOM树时，会阻塞渲染，直至CSSOM树构建完成
+#### CSS阻塞渲染优化  
+在构建CSSOM树时，会阻塞渲染，直至CSSOM树构建完成  
 - css放body前面，以此避免css阻塞渲染带来的白屏。看上去网站反应的快一点
 - 构建CSSOM树是一个十分消耗性能的过程，所以应该尽量保证层级扁平，减少过度层叠
-- 越是具体的CSS选择器，执行速度越慢- CSS 选择符从右往左匹配查找，避免 DOM 深度过深
+- CSS选择符从右往左匹配查找：越是具体的CSS选择器，执行速度越慢
 - 避免设置多层内联样式
 - 避免使用CSS表达式，例如：calc()
+##### 为什么选择器是从右往左的呢
+加入一个ul下面有100个li，从左往右从ul找去li，其实是把时间都浪费在失败匹配上了。而从右往左，每一步都在过滤无效匹配
