--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -21,7 +21,8 @@
 - 0, -0, +0 -> false
 - NaN -> false
 - "" -> false
-- [] -> true
+- [] -> false //因为[].toString == ''
+- {} -> true //因为{}.toString == [Object, Object]
 
 #### 自动转换 
 - ToPrimitive
