--- a/面经/头条.md
+++ b/面经/头条.md
@@ -11,7 +11,6 @@
 - bfs和dfs实现
 - jsonp实现， 说明jsonp的原理，缺点
 - 实现一个高精度定时器，可以在浏览器计算任务繁杂的时候依然准确
-- 线程与进程之间的区别
 - 线程池原理
 - 从浏览器输入url到展示网页的过程
 - __proto__和prototype的区别和关系?用代码说明。（Function对象，Object对象，function test(){},这三者之间__proto__和prototype的关系）
@@ -170,3 +169,6 @@ var b = ['a','b','c'];
 - TCP连接，一个包丢了会怎么处理，拥塞控制
 - 如果服务端想更新一个强制缓存，有什么解决方案？
 - 写个二叉树，实现插入、前中后任意一种遍历
+- 数据类型转换再走一遍
+- bind变形实现
+- throttle变形实现
