--- a/面经/头条.md
+++ b/面经/头条.md
@@ -1,11 +1,9 @@
 
 - js实现精确定时器
-- setTimeout为什么不是精确的
 - 如何中止一个promise
 - 函数节流（回调函数立即执行，如何手动取消timeout
 - 封装一个函数，返回promise对象，函数体中执行一个异步操作（比如readfile），需要实现超时判断
 - 有序数组合并，深拷贝（用json的方法如何深拷贝date对象、正则对象
-- 输入url到显示的整个流程
 - HTTPS为什么安全、如何建立连接、如何对数据进行加密（这里我提到对称密匙和非对称密匙，并做了进一步解释，面试官又问到客户端是如何获得解密的密匙
 - 实现判断二叉树是否存在一条路径使得路径上的值之和为target的函数
 - bfs和dfs实现
@@ -36,11 +34,8 @@
 - 能否用标准盒模型实现ie盒模型
 - 比较了一下null==undefined，1==‘1’
 - 实现DOM2JSON
-- 实现 检查二叉树中是否存在一条路径，使路径上节点和等于给出值，时间复杂度
 - TCP和UDP的区别
 - HTTP的组成部分
-- 阻止冒泡：stopPropogation()，cancelBubble()
-- 回流和重绘，什么时候会重绘但是不回流
 - 闭包,手写闭包
 - 去掉字符串中的’b’和’ac’结构。写是写出来了
 - Promise.all的实现原理
@@ -63,7 +58,6 @@
 - 浏览器是怎么加载一个HTML的（解析dom，css，js过程。。。）
 - 回流重绘，为什么用transform写动画不用position top left
 - if...else...多层嵌套怎么解决
-- n维数组转换成1维数组，比如:[1,[2,3],[[4],[5,6]]]变成[1,2,3,4,5,6]
 - 写一个EventEmitter
 ```
 class EventEmitter {
@@ -125,8 +119,7 @@ class EventEmitter {
 - 如果一个页面卡顿，那可能是什么原因？（典型的来了，最好是有思路的将下去）
 - 如果想要图片懒加载，怎么实现？代码怎么写？
 - 路由导航，那是怎么实现的呢？  答vue-router  那是怎么配置的呢 
-- 网络七层模型
-- DNS流程
+- DNS流程  
 - 死锁
 - 银行家算法
 - 系统调用的过程
@@ -170,5 +163,5 @@ var b = ['a','b','c'];
 - 如果服务端想更新一个强制缓存，有什么解决方案？
 - 写个二叉树，实现插入、前中后任意一种遍历
 - 数据类型转换再走一遍
-- bind变形实现
+- bind变形实现';[]
 - throttle变形实现
