--- a/javascript/类型系统/数据类型.md
+++ b/javascript/类型系统/数据类型.md
@@ -1,11 +1,15 @@
 ### 基本类型  
+基本类型保存在栈里，按值访问
 - Undefined
 - Null
 - Boolean
-- Number
+- Number  
+负数/0 === -Infinity
 - String  
 
+
 ### 引用类型 
+引用类型保存在堆里，按引用访问
 #### Object
 - 构造方法
     - new Object()
