--- a/javascript/原型-作用域/原型-继承.md
+++ b/javascript/原型-作用域/原型-继承.md
@@ -47,8 +47,8 @@
 - 函数复用
 
 #### 组合继承
-```SubType.prototype = new SuperType();```
-```SubRype.prototype.constructor = SubType;```
+```SubType.prototype = new SuperType();```  
+```SubType.prototype.constructor = SubType;```
 ```
 // 引用类型属性放在SuperType的实例上
 function SuperType(name) {
