--- a/javascript/原型-作用域/防抖.md
+++ b/javascript/原型-作用域/防抖.md
@@ -1,37 +1,14 @@
-### 节流 throttle 
-规定在一个单位时间内，只能触发一次函数。如果这个单位时间内触发多次函数，只有一次生效。 
-举例: 
-- 监听滚动时间，比如是否滑到底部自动加载更多，用throttle来判断  
-- 鼠标不断点击触发，比如mousedown(单位时间内只触发一次)  
-
-实现方法： 
-- 用闭包保存一个标记
-- 在规定时间内出发，标记为false，不予执行
-- setTimeout等待规定时间后把标记设为true   
-```
-function throttle(fn, interval = 300) {
-    let canRun = true;
-    return function () {
-        if (!canRun) return;
-        canRun = false;
-        args = arguments
-        setTimeout(() => {
-            fn.apply(this, args);
-            canRun = true;
-        }, interval);
-    };
-}
-```
-
 ### 防抖 debounce 
 在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。   
 举例： 
-- search搜索联想，用户在不断输入值时，用防抖来节约请求资源。
-- window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次 
+- 搜索框输入查询
+- 表单验证
+- 按钮提交事件
+- 浏览器窗口缩放，resize 事件
 
 实现方法：   
 - 用闭包保存一个setTimeout的返回值   
-- 每当有新的用户输入的时候调用debounce函数，把前一次的timeout id clear掉  
+- 每当有新的用户输入的时候调用debounce函数，把前一次的timeout id clear掉 
 - 这样就能保证delay时间内如果用户还有在输入，不会执行ajax。只有指定间隔内没有输入时才会执行函数      
 ```
 function ajax(content) { // 模拟一个api call
@@ -52,7 +29,7 @@ debounce(ajax, 500)(content);
 ```
 带立即执行选项的防抖函数
 ```
-function debounce(func, delay, immediate) {
+function debounce(func, delay, immediate = true) {
 	let timer = null;
 	return function() {
         const that = this;
@@ -80,4 +57,39 @@ function debounce(func, delay) {
         )
     }
 }
+```
+带立即执行的debounce
+```
+function debounce(func, wait, immediate = true) {
+    let timeout, result;
+    // 延迟执行函数
+    const later = (context, args) => setTimeout(() => {
+        timeout = null;// 倒计时结束
+        if (!immediate) {
+            // 执行回调
+            result = func.apply(context, args);
+            context = args = null;
+        }
+    }, wait);
+    let debounced = function (...params) {
+        if (!timeout) {
+            timeout = later(this, params);
+            if (immediate) {
+                // 立即执行
+                result = func.apply(this, params);
+            }
+        } else {
+            clearTimeout(timeout);
+            // 函数在每个等待时延的结束被调用
+            timeout = later(this, params);
+        }
+        return result;
+    }
+    // 提供在外部清空定时器的方法
+    debounced.cancel = function () {
+        clearTimeout(timeout);
+        timeout = null;
+    };
+    return debounced;
+};
 ```
