--- a/javascript/深拷贝.md
+++ b/javascript/深拷贝.md
@@ -15,67 +15,27 @@ function isObj(obj) {
 	return obj !== null && (typeof obj === 'object' || typeof obj === 'function');
 }
 
-function deepCopy(obj) {
-	let copyObj = Array.isArray(obj) ? [] : {};
-	for (let key in obj) {
-		copyObj[key] = isObj(obj[key]) ? deepCopy(obj[key]) : obj[key];
-	}
-
-	return copyObj;
-}
-```
-
-#### 以上两种方法的问题  
-1. 特殊类型：function无法拷贝，date拷贝成字符串，reg拷贝成空对象  
-2. obj中有环
-
-#### 解决obj中有环  
-```
-function isObj(obj) {
-	return obj !== null && (typeof obj === 'object' && typeof obj === 'function');
-}
 
 function deepCopy(obj, hash = new WeakMap()) {
+	if (obj instanceof RegExp) {
+		return new RegExp(obj);
+	}
+
+	if (obj instanceof Date) {
+		return new Date(obj);
+	}
+
 	if (hash.has(obj)) {
 		return hash.get(obj);
 	}
 
-	let copyObj = Array.isArray(obj) ? [] : {};
+	let copy = new obj.constructor();
+	hash.set(obj, copy);
 	for (let key in obj) {
-		copyObj[key] = isObj(obj[key]) ? deepCopy(obj[key], hash) : obj[key]; 
+		if (obj.hasOwnProperty(key)) {
+			copy[key] = isObj(obj[key]) ? deepCopy(obj[key], hash) : obj[key];
+		}
 	}
 
-	hash.set(obj, copyObj);
-	return copyObj;
-}
-```
-
-
-#### 解决特殊种类对象  
-```
-function deepCopy(obj, hash = new WeakMap()) {
-	let copyObj;
-	let Constructor = obj.constructor;
-	switch(Constructor) {
-		case RegExp:
-			copyObj = new Constructor(obj);
-			break;
-		case Date:
-			copyObj = new Constructor(obj.getTime());
-			break;
-		default:
-			if (hash.has(obj)) {
-				return hash.get(obj);
-			}
-			copyObj = new Constructor();
-			hash.set(obj, copyObj);
-	}
-
-	for (let key in obj) {
-		copyObj[key] = isObj(obj[key]) ? deepCopy(obj[key], hash) : obj[key];
-	}
-
-	return copyObj;
-}
+	return copy;
 ``` 
-还是没有解决function的拷贝问题，不知道怎么解决  
