--- a/css/layout/圣杯布局.md
+++ b/css/layout/圣杯布局.md
@@ -10,7 +10,7 @@
 因此做以下修正：
 - content给出左右padding分别等于左右格子宽度，使得middle空出宽度不再覆盖左右盒子
 - padding把中间格子推进去的同时，左右格子也被推进去的，因此要设置-left和-right把左右格子推回最左和最右
-- 最后为了让-left，-right有效，把左右格子设为position relative
+- 最后为了让-left，-right有效，把左右格子设为position **relative**
 
 
 ```
