--- a/javascript/原型-作用域/防抖.md
+++ b/javascript/原型-作用域/防抖.md
@@ -39,7 +39,7 @@ function debounce(func, delay, immediate = true) {
 			func.apply(this, arguments);
 			setTimeout(() => timer = null, delay);
 		} else { 
-			setTimeout(() => func.apply(that, args), delay);
+			timer = setTimeout(() => func.apply(that, args), delay);
 		}
 	};
 }
