--- a/javascript/深拷贝.md
+++ b/javascript/深拷贝.md
@@ -17,6 +17,10 @@ function isObj(obj) {
 
 
 function deepCopy(obj, hash = new WeakMap()) {
+	if (!isObj) {
+		return obj;
+	}
+
 	if (obj instanceof RegExp) {
 		return new RegExp(obj);
 	}
@@ -29,11 +33,12 @@ function deepCopy(obj, hash = new WeakMap()) {
 		return hash.get(obj);
 	}
 
+	// 用obj.constructor()按类型构造一下copy
 	let copy = new obj.constructor();
 	hash.set(obj, copy);
 	for (let key in obj) {
 		if (obj.hasOwnProperty(key)) {
-			copy[key] = isObj(obj[key]) ? deepCopy(obj[key], hash) : obj[key];
+			copy[key] = deepCopy(obj[key], hash);
 		}
 	}
 
