--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -4,12 +4,14 @@
 - [] -> ""
 - [20] -> "20"
 - [1, 2] -> '1, 2'
+- undefined -> 'undefined'
+- null -> 'null'
 
 #### 转成Number
 - Number()
 - Date转成Number .getTime()
 - **undefined -> NaN**
-- null -> 0
+- **null -> 0**
 - "" -> 0
 - [] -> 0
 - [20] -> 20
