--- a/javascript/类型系统/类型转换.md
+++ b/javascript/类型系统/类型转换.md
@@ -1,33 +1,36 @@
 #### 转成String
-- String()
-- toString()
+- String()，可以用来区分 null 和 undefined
+- toString(), null 和 undefined 没有 toString 方法
 - [] -> ""
 - [20] -> "20"
 - [1, 2] -> '1, 2'
 - undefined -> 'undefined'
 - null -> 'null'
+- ***{}/obj -> '[Object, Object]'***
 
 #### 转成Number
 - Number()
-- Date转成Number .getTime()
+- Number.parseInt() 
+- Date 转成 Number .getTime()
 - **undefined -> NaN**
 - **null -> 0**
 - "" -> 0
 - [] -> 0
-- [20] -> 20
-- [10, 20] -> NaN
+- ***[20] -> 20***
+- ***[10, 20] -> NaN***
 
 #### 转成Boolean
 - undefined -> false
 - null -> false
 - 0, -0, +0 -> false
 - NaN -> false
-- "" -> false
-- [] -> false //因为[].toString == ''
-- {} -> true //因为{}.toString == [Object, Object]
+- "" -> false    
+除了上面 4 个是 false 其他都是 true  
+- [] -> true
+- {} -> true 
 
 #### 自动转换 
-- ToPrimitive
+- ToPrimitive（转换为原始值）
   - String： toString -> valueOf -> TypeError
   - Number:　valueof -> toString -> TypeError
 
@@ -45,13 +48,13 @@ fn.valueOf = function() {
 console.log(fn + 10); //15
 ```
 - 加法运算符
-  - 有string时转成string
-  - 没有string转成number
+  - 有 string 或 object 时优先调用 toString() 转成 string
+  - 没有 string 转成 number
 ```
 "5" + 1     // 返回 "51"      1 转换为 "1"  
 "5" - 1     // 返回 4         "5" 转换为 5
 ```
-- 其他运算符： 全部转成number
+- 其他运算符： 全部转成 number
 - ==： number优先而不是string优先  
 
 **Object.prototype.toString()是判断数据类型的终极解决办法**   
