--- a/javascript/原型-作用域/作用域链.md
+++ b/javascript/原型-作用域/作用域链.md
@@ -1,9 +1,30 @@
+#### 作用域
+***js 没有没有块级作用域***（即花括号封闭的代码）
+```
+if (true) {
+  var color = "blue";
+}
+alert(color); // "blue"
+
+for (var i = 0; i < 10; i++) {
+  doSomething(i);
+}
+alert(i); // 10
+
+function add(num1, num2) {
+  var sum = num1 + num2;
+  return sum;
+}
+var result = add(10, 20); // 30
+alert(sum) // error!
+```
 #### 作用域链
-- **创建**函数时，创建一个预先包含全局**变量对象**的作用域链，保存在函数的[[scope]]属性中
-- **执行**函数时，创建函数的**执行环境**，把函数[[scope]]下的作用域链复制给执行函数的作用域链
-- 创建**活动对象**(arguments和其他命名参数)，并把活动对象推入执行函数作用域链的顶端
-- 作用域链本质是指向变量对象的指针列表
+- **创建**函数时，创建一个预先包含所有父**变量对象**的层级链，保存在函数的 [[scope]] 属性中
+- **执行**函数时，创建函数的**执行环境**，把函数 [[scope]] 下的作用域链复制给执行函数的作用域链
+- 创建**活动对象**(arguments和其他命名参数)，并把活动对象推入执行函数作用域链的顶端。因此执行函数的作用域链是当前的变量对象加上函数的 [[scope]]
+- 属性查找是向上查找的过程，从最深的当前对象开始
+- 作用域链是 context 所有变量对象的列表，本质是指向变量对象的指针列表
 
 #### 闭包的作用域链- 内存泄漏
 - outter函数执行完毕后其活动对象不会被销毁仍然保存在内存中
-- 因为inner匿名函数的作用域链仍在引用outter函数的活动对象
+- 因为inner匿名函数的作用域链仍在引用outter函数的活动对象           44
